compile_errors.txt
Listing 'production-backend/app'...
Listing 'production-backend/app/api'...
Listing 'production-backend/app/api/routes'...
Listing 'production-backend/app/api/v1'...
Listing 'production-backend/app/config'...
Listing 'production-backend/app/constants'...
Listing 'production-backend/app/core'...
Listing 'production-backend/app/database'...
Listing 'production-backend/app/middleware'...
Listing 'production-backend/app/models'...
Listing 'production-backend/app/monitoring'...
Listing 'production-backend/app/routers'...
Compiling 'production-backend/app/routers/agent_analysis.py'...
***   File "production-backend/app/routers/agent_analysis.py", line 484
    current_user: User = Depends(get_current_user),
    ^
SyntaxError: non-default argument follows default argument

Listing 'production-backend/app/routers/channels'...
Listing 'production-backend/app/routers/webhooks'...
Listing 'production-backend/app/schemas'...
Listing 'production-backend/app/services'...
Listing 'production-backend/app/services/agent_capabilities'...
Listing 'production-backend/app/services/analytics'...
Compiling 'production-backend/app/services/budget_management_service.py'...
***   File "production-backend/app/services/budget_management_service.py", line 190
    new_allocations = allocation_data.get("platform_allocations", {})\n            \n            allocated_sum = sum(Decimal(str(amount)) for amount in new_allocations.values())
                                                                                                                                                                                ^
SyntaxError: unexpected character after line continuation character

Listing 'production-backend/app/services/platform_connectors'...
Compiling 'production-backend/app/services/platform_connectors/eventbrite_connector.py'...
***   File "production-backend/app/services/platform_connectors/eventbrite_connector.py", line 609
    4. **429 Too Many Requests**: You've hit the rate limit, wait and retry
                                                                           ^
SyntaxError: EOF while scanning triple-quoted string literal

Compiling 'production-backend/app/services/platform_connectors/square_pos_connector.py'...
*** Sorry: IndentationError: unexpected unindent (square_pos_connector.py, line 195)
Listing 'production-backend/app/services/sso'...
Listing 'production-backend/app/static'...
Listing 'production-backend/app/static/cached_logos'...
Listing 'production-backend/app/tasks'...
Listing 'production-backend/app/utils'...
